--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     align-items:center;
     padding-top: 20%;
+    
 }
 
 input {
@@ -39,7 +40,22 @@ label {
 .locaTions {
     height: 300px;
     width: 500px;
-    background-color: rgb(50, 124, 90);
+    color: rgb(59, 33, 83);
+    /*background-color: rgb(50, 124, 90);*/
+    background-color: color-mix(in srgb, rgb(65, 137, 165),pink 60%);;
     border-radius: 1rem;
     padding: 5px 5px;
+}
+.locaTions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+#country {
+    font-size: xx-large;
+}
+img {
+    height: 100px;
 }
